k8s/overlays/staging/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server
spec:
  template:
    spec:
      containers:
      - name: websocket-server
        image: ghcr.io/williamguerzeder/websocket-app:staging
